unpackaged/main/default/objects/Account/fields/Additional_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_1__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Additional  Email 1 ||</description>
    <label>Additional Email 1</label>
    <type>Email</type>
</CustomField>