unpackaged/main/default/objects/Account/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <description>this amount will be reflected on the annual quota</description>
    <label>Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>