unpackaged/main/default/objects/Account/fields/Ads_Region__c.field-meta.xml
<CustomField>
    <fullName>Ads_Region__c</fullName>
    <description>US-0009226 - [Ads 2020] Account Turnover</description>
    <formula>CASE(
      TEXT( Country_Code__c )  , 
      &quot;&quot;, IF(CONTAINS( EBH_DataOrigin__c ,&quot;EU Ads&quot;), &quot;EU&quot;,&quot;&quot;), 
      &quot;US&quot;, &quot;NA&quot;,
      &quot;AU&quot;, &quot;AU&quot;,
      &quot;EU&quot;
)</formula>
    <label>Ads Region</label>
    <type>Text</type>
</CustomField>