unpackaged/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>US-0011804 - 1.1. Influencer (new account record type)</description>
    <formula>IF(ISNULL(Date_of_Birth__c) , 0 , FLOOR((TODAY()-Date_of_Birth__c +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>