unpackaged/main/default/objects/Account/fields/Agreement_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Addendum__c</fullName>
    <description>US-0009148 - [NA] New fields and Page Layout changes on Account for &#39;Seller&#39; recordtype</description>
    <label>Agreement Addendum</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>