unpackaged/main/default/objects/Account/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <formula>Q1_Quota__c +  Q2_Quota__c +  Q3_Quota__c +  Q4_Quota__c +  Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>