unpackaged/main/default/objects/Account/fields/Assignee_Code__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Code__c</fullName>
    <description>US-0009164 - Migrate account fields for EU ads</description>
    <label>Assignee Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>