unpackaged/main/default/objects/Account/fields/Automatic_Order_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Order_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009164 - Migrate account fields for EU ads</description>
    <label>Automatic Order Confirmation</label>
    <type>Checkbox</type>
</CustomField>