unpackaged/main/default/objects/Account/fields/Average_CSAT_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_CSAT_30_Days__c</fullName>
    <description>US-0009739 [AU] Customer Support metric for AU Sellers, automatically completed via Integration and Read-Only for non-System Administrator profiles</description>
    <inlineHelpText>Average customer satisfaction score across all contacts over the past 30 days</inlineHelpText>
    <label>Average CSAT (30 Days)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>