unpackaged/main/default/objects/Account/fields/Banner_Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Banner_Likelihood_Score__c</fullName>
    <description>EPH-6705 Channel Likelihood on Contact Level</description>
    <inlineHelpText>Likelihood (0-1) of the seller clicking on a banner.
99 indicates insufficient data for prediction.
Blank indicates no data for prediction</inlineHelpText>
    <label>Banner Likelihood Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>