unpackaged/main/default/objects/Account/fields/BCD_External_Id__c.field-meta.xml
<CustomField>
    <fullName>BCD_External_Id__c</fullName>
    <description>US-0018872 Hypercare Coupon - Correct BCD File missing fields
US-0007348 Coupon Correction for External ID (2020-04-02)</description>
    <formula>IF(AND(EBH_OracleID__c != NULL, ISO_Currency_Code__c != NULL),(TEXT(VALUE(EBH_OracleID__c) * 1000 + VALUE(ISO_Currency_Code__c))), NULL)</formula>
    <label>BCD External Id</label>
    <type>Text</type>
</CustomField>