unpackaged/main/default/objects/Account/fields/Below_SP_Standard_Date__c.field-meta.xml
<CustomField>
    <fullName>Below_SP_Standard_Date__c</fullName>
    <label>Below SP Standard Date</label>
    <type>Date</type>
</CustomField>