unpackaged/main/default/objects/Account/fields/Below_SP_Standards__c.field-meta.xml
<CustomField>
    <fullName>Below_SP_Standards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Below Seller Portal Standards</description>
    <inlineHelpText>Below Seller Portal Standards</inlineHelpText>
    <label>Below SP Standards</label>
    <type>Checkbox</type>
</CustomField>