unpackaged/main/default/objects/Account/fields/Billing_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Telephone__c</fullName>
    <label>Billing Telephone</label>
    <type>Phone</type>
</CustomField>