unpackaged/main/default/objects/Account/fields/Blacklist_Comment__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Comment__c</fullName>
    <description>EPH-5630 Seller - Quality &amp; Preference
US-0008638 - Seller 360: Rename &quot;Blacklist&quot; to &quot;Blocklist&quot;</description>
    <label>Blocklist Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>