unpackaged/main/default/objects/Account/fields/Blacklisted_By__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_By__c</fullName>
    <description>EPH-5630 Seller - Quality &amp; Preference
US-0008638 - Seller 360: Rename &quot;Blacklist&quot; to &quot;Blocklist&quot;</description>
    <label>Blocklisted By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>