unpackaged/main/default/objects/Account/fields/Blacklisted_Date__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Date__c</fullName>
    <description>EPH-5630 Seller - Quality &amp; Preference
US-0008638 - Seller 360: Rename &quot;Blacklist&quot; to &quot;Blocklist&quot;</description>
    <inlineHelpText>Date the seller was blocklisted.</inlineHelpText>
    <label>Blocklisted Date</label>
    <type>DateTime</type>
</CustomField>