unpackaged/main/default/objects/Account/fields/Blocklist__c.field-meta.xml
<CustomField>
    <fullName>Blocklist__c</fullName>
    <description>US-0011804 - 1.1. Influencer (new account record type)</description>
    <label>Blocklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>