unpackaged/main/default/objects/Account/fields/Blocklist_reasons__c.field-meta.xml
<CustomField>
    <fullName>Blocklist_reasons__c</fullName>
    <description>US-0011804 - 1.1. Influencer (new account record type)</description>
    <inlineHelpText>Please only add process related information, no subjective/personal opinion. Also add name of eBay contact person for further questions &amp; information.</inlineHelpText>
    <label>Blocklist (reasons)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>