unpackaged/main/default/objects/Account/fields/BoB_Subsegment__c.field-meta.xml
<CustomField>
    <fullName>BoB_Subsegment__c</fullName>
    <description>EPH-5727 BOB MGMT - Seller BOB Object - Fields</description>
    <inlineHelpText>A seller can be managed by one of the following groups: Category Mgmt. (Focus), Platin AMs (Platin &amp; Bolt-On) or GCX (MSO). If a seller is not part of a BoB the value will appear blank.</inlineHelpText>
    <label>Managed Subsegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
            <value>
                <fullName>AM Bolt-on</fullName>
            </value>
            <value>
                <fullName>UK MSO Charity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>