unpackaged/main/default/objects/Account/fields/Brand_Engagement_Lead__c.field-meta.xml
<CustomField>
    <fullName>Brand_Engagement_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertising Solutions Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>