unpackaged/main/default/objects/Account/fields/Brand_Segment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Segment__c</fullName>
    <description>US-0010392 - ADS - New Field &#39;Brand Segment&#39; on Account Object: EU version</description>
    <label>Brand Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Complementary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>