unpackaged/main/default/objects/Account/fields/Brand_Segment_Affinity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Segment_Affinity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010392 - ADS - New Field &#39;Brand Segment&#39; on Account Object: EU version</description>
    <label>Brand Segment Affinity</label>
    <type>Checkbox</type>
</CustomField>