unpackaged/main/default/objects/Account/fields/Cancelled_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Transactions__c</fullName>
    <description>US-0008174 [US] Additional Metrics on Seller 360 Layout</description>
    <inlineHelpText>The percentage of cancelled transaction in the previous retail week.</inlineHelpText>
    <label>Cancelled Transactions (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>