unpackaged/main/default/objects/Account/fields/Cases_w_o_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Cases_w_o_Resolution__c</fullName>
    <description>US-0008174 [US] Additional Metrics on Seller 360 Layout</description>
    <inlineHelpText>Percentage of cases without any resolution from previous retail week.</inlineHelpText>
    <label>Cases w/o Resolution (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>