unpackaged/main/default/objects/Account/fields/Cash_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cash_Basis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Cash Basisl ||</description>
    <label>Cash Basis</label>
    <type>Checkbox</type>
</CustomField>