unpackaged/main/default/objects/Account/fields/Certified_Email__c.field-meta.xml
<CustomField>
    <fullName>Certified_Email__c</fullName>
    <description>US-0009164 - Migrate account fields for EU ads</description>
    <label>Certified Email</label>
    <type>Email</type>
</CustomField>