unpackaged/main/default/objects/Account/fields/Claims_Rate__c.field-meta.xml
<CustomField>
    <fullName>Claims_Rate__c</fullName>
    <description>US-0010088 - [UK Risk] Claims and Refund/return rate Seller metrics from DWH</description>
    <inlineHelpText>Claims Rate + Charge Back Rate (Trailing 90 Days)</inlineHelpText>
    <label>Claims Rate (%)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>