unpackaged/main/default/objects/Account/fields/Click_Collect_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Click_Collect_Adoption__c</fullName>
    <description>[#EPH-7282] New Shipping metrics</description>
    <inlineHelpText>Percentage of Eligible Listings that provide Click &amp; Collect Option (Last Retail Week)</inlineHelpText>
    <label>Click &amp; Collect Adoption (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>