unpackaged/main/default/objects/Account/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Client Code ||</description>
    <label>Client Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>