unpackaged/main/default/objects/Account/fields/Contact_Data_Quality__c.field-meta.xml
<CustomField>
    <fullName>Contact_Data_Quality__c</fullName>
    <description>EPH-5630 Seller - Quality &amp; Preference</description>
    <label>Contact Data Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>