unpackaged/main/default/objects/Account/fields/Coupon_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Discount_Rate__c</fullName>
    <description>EPH-8103 New Coupon Promotion preference fields on Customer Object</description>
    <label>Coupon Discount Rate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>