unpackaged/main/default/objects/Account/fields/Coupon_Funding_Preference__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Funding_Preference__c</fullName>
    <description>EPH-8103 New Coupon Promotion preference fields on Customer Object</description>
    <label>Coupon Funding Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
                <isActive>false</isActive>
                <label>Highest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>