unpackaged/main/default/objects/Account/fields/Coupon_Promotions_Participation__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Promotions_Participation__c</fullName>
    <description>EPH-8103 New Coupon Promotion preference fields on Customer Object</description>
    <label>Coupon Promotions Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>