unpackaged/main/default/objects/Account/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Credit Check|| CR - 00527892</description>
    <label>Credit Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Exceptions</fullName>
            </value>
            <value>
                <fullName>Cash Basis</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>