unpackaged/main/default/objects/Account/fields/CSS_Segment__c.field-meta.xml
<CustomField>
    <fullName>CSS_Segment__c</fullName>
    <description>US-0015693 - FILTERS REQUIRED TO SEGMENT SELLERS</description>
    <inlineHelpText>Customer CSS Segmentation</inlineHelpText>
    <label>CSS Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Merchant</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>