unpackaged/main/default/objects/Account/fields/Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount__c</fullName>
    <description>US-0009254 - Migrate opportunity fields for EU ads</description>
    <label>Customer Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>