unpackaged/main/default/objects/Account/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <inlineHelpText>Segmentation model at the customer level based on buying and selling activity. Mainly used by customer support for routing.</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managed Account</fullName>
            </value>
            <value>
                <fullName>New Joiner</fullName>
            </value>
            <value>
                <fullName>High Value Seller</fullName>
            </value>
            <value>
                <fullName>High Value Trader</fullName>
            </value>
            <value>
                <fullName>High Value Buyer</fullName>
            </value>
            <value>
                <fullName>Uber Buyer</fullName>
            </value>
            <value>
                <fullName>VIP Seller</fullName>
            </value>
            <value>
                <fullName>HV_HGMV</fullName>
            </value>
            <value>
                <fullName>eBayPlus</fullName>
            </value>
            <value>
                <fullName>New Buyer</fullName>
            </value>
            <value>
                <fullName>Reactivated buyer</fullName>
            </value>
            <value>
                <fullName>CS_General</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>