unpackaged/main/default/objects/Account/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>US-0011804 - 1.1. Influencer (new account record type)</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>