unpackaged/main/default/objects/Account/fields/Deal_Program_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Deal_Program_Exemption__c</fullName>
    <description>US-0009887 - [SEP] NA Unsub Deal: New field on Account object for Deal Exemptions,
US-0011448 - Additional validation for NA un-sub to sub conversion rule</description>
    <inlineHelpText>If the seller is eligible for exemptions from rejection or business rules</inlineHelpText>
    <label>Deal Program Exemption</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handle Time</fullName>
            </value>
            <value>
                <fullName>Item Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>