unpackaged/main/default/objects/Account/fields/Deal_Window_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deal_Window_Limit__c</fullName>
    <formula>IF(INCLUDES(Deal_Program_Exemption__c,&quot;Item Limit&quot;),500,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Window Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>