unpackaged/main/default/objects/Account/fields/Developer_Id__c.field-meta.xml
<CustomField>
    <fullName>Developer_Id__c</fullName>
    <description>US-0011440 - New Fields &amp; Picklists for Customer Partner record Type</description>
    <formula>IF( RecordType.DeveloperName == &#39;EBH_Partner&#39; ,  EBH_OracleID__c ,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Developer Id</label>
    <type>Text</type>
</CustomField>