unpackaged/main/default/objects/Account/fields/eBay_Academy_Whitelisted__c.field-meta.xml
<CustomField>
    <fullName>eBay_Academy_Whitelisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010274 - New checkbox (eBay Academy Whitelisted) on Seller</description>
    <inlineHelpText>By enabling this checkbox you&#39;ll initiate Email invitation to the seller for eBay Academy.</inlineHelpText>
    <label>eBay Academy Whitelisted</label>
    <type>Checkbox</type>
</CustomField>