unpackaged/main/default/objects/Account/fields/eBay_API_User_Id__c.field-meta.xml
<CustomField>
    <fullName>eBay_API_User_Id__c</fullName>
    <description>US-0010111 - [ETL] Integrate ebay API user id to identify user via ebay SSO</description>
    <externalId>true</externalId>
    <inlineHelpText>eBay API Public User ID</inlineHelpText>
    <label>eBay_API_User_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>