unpackaged/main/default/objects/Account/fields/ebay_session_id_tmp__c.field-meta.xml
<CustomField>
    <fullName>ebay_session_id_tmp__c</fullName>
    <description>US-0011082 - Allow Sellers to link Accounts.
store temporary ebay session id during seller portal link account process</description>
    <label>ebay_session_id_tmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>