unpackaged/main/default/objects/Account/fields/EBH_AccountManageName__c.field-meta.xml
<CustomField>
    <fullName>EBH_AccountManageName__c</fullName>
    <description>[EBH] (EPH-2883) - Account Manager Name</description>
    <inlineHelpText>Name of the Seller&#39;s Account Manager. If the Seller is unmanaged this field will appear blank.</inlineHelpText>
    <label>Account Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>