unpackaged/main/default/objects/Account/fields/EBH_ActiveSellingWeeks__c.field-meta.xml
<CustomField>
    <fullName>EBH_ActiveSellingWeeks__c</fullName>
    <description>[EPH] (EPH-5291 - Add a field on customer 360 and targeting engine : # selling weeks in the past 52 wks - SF HIVE)</description>
    <inlineHelpText>Number of weeks the seller had a selling activity in last T52 weeks. For example a seller sold one item in week 1 and and week 2 in last T52 weeks the number displayed is 2.</inlineHelpText>
    <label># Active Selling Weeks in the past 52 wk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>