unpackaged/main/default/objects/Account/fields/EBH_ActualStandard__c.field-meta.xml
<CustomField>
    <fullName>EBH_ActualStandard__c</fullName>
    <description>[EBH] - (US-0032) : to capture the actual standard value</description>
    <inlineHelpText>Seller&#39;s performance standard level (i.e. ETRS, Above Standard, Below Standard), based on the sellers primary listing site.</inlineHelpText>
    <label>Actual Standard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETRS</fullName>
            </value>
            <value>
                <fullName>Above Standard</fullName>
            </value>
            <value>
                <fullName>Below Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>