unpackaged/main/default/objects/Account/fields/EBH_ASPLast4Weeks__c.field-meta.xml
<CustomField>
    <fullName>EBH_ASPLast4Weeks__c</fullName>
    <description>[EBH] (EPH-4125) - Average Selling Price (Last 4 Weeks)</description>
    <label>Deprecated EBH_ASPLast4Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>