unpackaged/main/default/objects/Account/fields/EBH_ASPLastWeek__c.field-meta.xml
<CustomField>
    <fullName>EBH_ASPLastWeek__c</fullName>
    <description>[EBH] (EPH-4643) - Average Selling Price (Last Week)</description>
    <label>Average Selling Price (Not Used)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>