unpackaged/main/default/objects/Account/fields/EBH_AverageSellingPrice__c.field-meta.xml
<CustomField>
    <fullName>EBH_AverageSellingPrice__c</fullName>
    <description>[EBH] (EPH-2803) - Average Selling Price (Last 12 Months)</description>
    <formula>IF( EBH_SoldItems__c &gt; 0 , EBH_GMVLast12Months__c / EBH_SoldItems__c , 0)</formula>
    <inlineHelpText>Average Selling Price (ASP) over the last 12 months.</inlineHelpText>
    <label>Average Selling Price (Last 12 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>