unpackaged/main/default/objects/Account/fields/EBH_AVGLLFPCNT__c.field-meta.xml
<CustomField>
    <fullName>EBH_AVGLLFPCNT__c</fullName>
    <description>[EBH] (EPH-2201) - AVG LL FP CNT</description>
    <label>Fixed Price (LL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>