unpackaged/main/default/objects/Account/fields/EBH_AVGLLPLUS__c.field-meta.xml
<CustomField>
    <fullName>EBH_AVGLLPLUS__c</fullName>
    <description>[EBH] (EPH-2201) -  AVG LL PLUS</description>
    <label>eBay Plus Adoption (LL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>