unpackaged/main/default/objects/Account/fields/EBH_AVGLLVRTNCNT__c.field-meta.xml
<CustomField>
    <fullName>EBH_AVGLLVRTNCNT__c</fullName>
    <description>[EBH] (EPH-2201) - AVG LL VRTN CNT</description>
    <inlineHelpText>Average number of SKUs (variations) from all Live Listings over the last retail week.</inlineHelpText>
    <label>SKUs (Last Week)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>